# haskell-servant-event-sourcing

./: .travis.yml  LICENSE  README.md  servant-event-sourcing.cabal  stack.yaml
lib/eventful-core/: eventful-core.cabal
lib/eventful-memory/: eventful-memory.cabal
src/: Counter.hs  CounterApi.hs  CounterEventStore.hs  Main.hs
