name:                servant-event-sourcing
version:             0.1.0.0

homepage:            https://github.com/dnikolovv/haskell-servant-event-sourcing
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Dobromir Nikolov
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable servant-docs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       servant-server,
                       time,
                       aeson,
                       wai,
                       warp,
                       eventful-core,
                       eventful-memory,
                       stm,
                       safe
